--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 }
 
 .main-app {
-  opacity: 0.6;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-  gap: 1rem;
-  background-color: lightgrey;
-  padding: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+  gap: 2rem;
+  background-color: rgb(39, 37, 37);
+  color: white;
+  padding: 2rem;
 }
