code refine and theme selection

--- a/src/components/feed/post/media/media.module.css
+++ b/src/components/feed/post/media/media.module.css
@@ -24,9 +24,18 @@
 .carouselButton {
   all: unset;
   position: absolute;
-  padding: 1rem;
+  padding: 0px 4px 0 0;
   cursor: pointer;
   color: white;
+
+  img {
+    width: 28px;
+    height: 28px;
+
+    &.rightChevron {
+      transform: rotate(180deg);
+    }
+  }
 }
 
 .carouselButtonNext {
