--- a/src/components/feed/feed.module.css
+++ b/src/components/feed/feed.module.css
@@ -1,8 +1,30 @@
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 2rem 0 2rem;
+
+  img {
+    width: 200px;
+    height: 50px;
+  }
+}
+
 .feedContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 2rem;
-  background-color: rgb(39, 37, 37);
-  color: white;
+  color: var(--text-color);
   padding: 2rem;
+
+  @media (max-width: 400px) {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
