--- a/src/components/feed/post/post-metrics/post-metrics.module.css
+++ b/src/components/feed/post/post-metrics/post-metrics.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: rgb(62, 60, 60);
+  background-color: var(--primary-color);
 }
 
 .postMetricsBox:first-child {
@@ -30,5 +30,5 @@
 
 .postMetricsLabel {
   font-size: small;
-  color: lightgrey;
+  color: var(--secondary-color);
 }
